make purchase side added

--- a/index.html
+++ b/index.html
@@ -243,11 +243,12 @@
                       <li>Home Cooker</li>
                     </ul>
                     <div class="border-b w-[294px] border-[#11111126] mt-4 mb-4 "></div>
-                    <div class="text-2xl font-medium">
+                    <div class="text-2xl font-medium relative">
                       <h3>Total price: <span class="text-[#11111180]">257.00TK</span></h3>
                     <h3>Discount: <span class="text-[#11111180]">51.40TK</span></h3>
                     <h3>Total: <span class="text-[#11111180]">205.60TK</span></h3>
-                    <div class="border-b w-[294px] border-[#11111126] mt-4 "></div>
+                    <div class="border-b w-[294px] border-[#11111126] mt-4"></div>
+                    <button class="w-[294px] bg-[#E527B2] text-white text-xl font-semibold py-4 rounded-lg translate-y-[50%]">Make Purchase</button>
                     </div>
                     
                   </div>
