product list added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <!-- kitchenwareCard -->
                 <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- first card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                    <div>
+                      <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod1.png"class="" />
                         </figure>
@@ -66,12 +67,14 @@
                             <img src="./images/frame2.svg" alt="">
                             <img src="./images/frame2.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">K. Accessories</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">39.00 TK</p>
+                          <p class="product-name first-letter:mt-2 text-[#111] text-xl font-semibold">K. Accessories</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">39.00 TK</p>
                         </div>
                       </div>
+                    </div>
                        <!-- Second card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                       <div>
+                    <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod2.png"class="" />
                         </figure>
@@ -83,12 +86,14 @@
                             <img src="./images/frame2.svg" alt="">
                             <img src="./images/frame2.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">K. Accessories</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">25.00 TK</p>
+                          <p class="product-name mt-2 text-[#111] text-xl font-semibold">K. Accessories</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">25.00 TK</p>
                         </div>
                       </div>
+                    </div>
                        <!-- third card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                    <div>
+                      <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod3.png"class="" />
                         </figure>
@@ -100,10 +105,11 @@
                             <img src="./images/frame1.svg" alt="">
                             <img src="./images/frame2.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Home Cooker</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">49.00 TK</p>
+                          <p class="product-name mt-2 text-[#111] text-xl font-semibold">Home Cooker</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">49.00 TK</p>
                         </div>
                       </div>
+                    </div>
 
                 </div>
 
@@ -111,7 +117,8 @@
                 <!-- SportswearCard -->
                 <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- fourth card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                    <div>
+                      <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod4.png"class="" />
                         </figure>
@@ -123,29 +130,33 @@
                             <img src="./images/frame2.svg" alt="">
                             <img src="./images/frame2.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Sports Back Cap</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">49.00 TK</p>
+                          <p class="product-name mt-2 text-[#111] text-xl font-semibold">Sports Back Cap</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">49.00 TK</p>
                         </div>
                       </div>
-                       <!-- Second card -->
-                    <div class="card bg-[#FFF] rounded-lg">
-                        <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
-                          <img src="./images/prod5.png"class="" />
-                        </figure>
-                        <div class="card-body items-center text-center">
-                          <div class="flex mt-5">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame2.svg" alt="">
-                          </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Full Jersey Set</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">69.00 TK</p>
+                    </div>
+                       <!-- fifth card -->
+                   <div>
+                    <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
+                      <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
+                        <img src="./images/prod5.png"class="" />
+                      </figure>
+                      <div class="card-body items-center text-center">
+                        <div class="flex mt-5">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame2.svg" alt="">
                         </div>
+                        <p class="product-name mt-2 text-[#111] text-xl font-semibold">Full Jersey Set</p>
+                        <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">69.00 TK</p>
                       </div>
-                       <!-- third card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                    </div>
+                   </div>
+                       <!-- sixth card -->
+                    <div>
+                      <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod6.png"class="" />
                         </figure>
@@ -157,10 +168,11 @@
                             <img src="./images/frame2.svg" alt="">
                             <img src="./images/frame2.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Sports cates</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">159.00 TK</p>
+                          <p class="product-name mt-2 text-[#111] text-xl font-semibold">Sports cates</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">159.00 TK</p>
                         </div>
                       </div>
+                    </div>
 
                 </div>
 
@@ -168,7 +180,8 @@
                 <!-- FurnitureCard -->
                 <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                     <!-- seven card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                    <div>
+                      <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod7.png"class="" />
                         </figure>
@@ -180,12 +193,14 @@
                             <img src="./images/frame1.svg" alt="">
                             <img src="./images/frame2.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Single Relax Chair</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">185.00 TK</p>
+                          <p class="product-name mt-2 text-[#111] text-xl font-semibold">Single Relax Chair</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">185.00 TK</p>
                         </div>
                       </div>
+                    </div>
                        <!-- eight card -->
-                    <div class="card bg-[#FFF] rounded-lg">
+                    <div>
+                      <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
                         <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
                           <img src="./images/prod8.png"class="" />
                         </figure>
@@ -197,27 +212,30 @@
                             <img src="./images/frame1.svg" alt="">
                             <img src="./images/frame1.svg" alt="">
                           </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Children play</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">299.00 TK</p>
+                          <p class="product-name mt-2 text-[#111] text-xl font-semibold">Children play</p>
+                          <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">299.00 TK</p>
                         </div>
                       </div>
+                    </div>
                        <!-- nine card -->
-                    <div class="card bg-[#FFF] rounded-lg">
-                        <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
-                          <img src="./images/prod9.png"class="" />
-                        </figure>
-                        <div class="card-body items-center text-center">
-                          <div class="flex mt-5">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                            <img src="./images/frame1.svg" alt="">
-                          </div>
-                          <p class="mt-2 text-[#111] text-xl font-semibold">Flexible Sofa</p>
-                          <p class="mt-2 mb-5 text-[#11111180] text-xl font-normal">339.00 TK</p>
+                   <div>
+                    <div onclick="cardClickBtn(this)" class="card bg-[#FFF] rounded-lg">
+                      <figure class="bg-[#1111110D] pb-8 pt-12 mx-5 mt-5 rounded-lg">
+                        <img src="./images/prod9.png"class="" />
+                      </figure>
+                      <div class="card-body items-center text-center">
+                        <div class="flex mt-5">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
+                          <img src="./images/frame1.svg" alt="">
                         </div>
+                        <p class="product-name mt-2 text-[#111] text-xl font-semibold">Flexible Sofa</p>
+                        <p class="product-price mt-2 mb-5 text-[#11111180] text-xl font-normal">339.00 TK</p>
                       </div>
+                    </div>
+                   </div>
 
                 </div>
                
@@ -230,25 +248,22 @@
                   <h3 class="mt-[184px] pb-4 pt-6 text-2xl font-medium">Have coupon?</h3>
                   <div class="flex items-center  ">
                     <input class="rounded-lg border border-solid border-[#11111126] mb-6 outline-none py-4 pl-4" placeholder="Coupon code" type="text" name="" id="">
-                    <button class="bg-[#E527B2] rounded-tl-0 rounded-tr-lg rounded-br-lg mb-6 rounded-bl-0 text-white px-5 py-3 pb-5 mr-6">Apply</button>
+                    <button disabled class="bg-[#E527B2] rounded-tl-0 rounded-tr-lg rounded-br-lg mb-6 rounded-bl-0 text-white px-5 py-3 pb-5 mr-6">Apply</button>
                   </div>
                 </div>
 
                 <!-- make purchase part -->
                 <div>
                   <div class="bg-[#FFF] rounded-lg pl-6 mt-6">
-                    <ul type="1" class="font-medium text-2xl pt-6">
-                      <li>Home Cooker</li>
-                      <li>Sports cats</li>
-                      <li>Home Cooker</li>
-                    </ul>
+                    <ol id="selected-product" class="list-decimal font-medium text-2xl pt-6 pl-6">
+                    </ol>
                     <div class="border-b w-[294px] border-[#11111126] mt-4 mb-4 "></div>
                     <div class="text-2xl font-medium relative">
                       <h3>Total price: <span class="text-[#11111180]">257.00TK</span></h3>
                     <h3>Discount: <span class="text-[#11111180]">51.40TK</span></h3>
                     <h3>Total: <span class="text-[#11111180]">205.60TK</span></h3>
                     <div class="border-b w-[294px] border-[#11111126] mt-4"></div>
-                    <button class="w-[294px] bg-[#E527B2] text-white text-xl font-semibold py-4 rounded-lg translate-y-[50%]">Make Purchase</button>
+                    <button disabled class="w-[294px] bg-[#E527B2] text-white text-xl font-semibold py-4 rounded-lg translate-y-[50%]">Make Purchase</button>
                     </div>
                     
                   </div>
@@ -256,5 +271,6 @@
             </div>
         </div>
     </main>
+    <script src="js/sale.js"></script>
 </body>
 </html>
