--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <header class="bg-[#F9F6E2]">
             <div class="flex flex-col lg:flex-row justify-center gap-7 lg:container lg:mx-auto">
                 <div class="text-center">
-                  <h4 class="text-[#111] text-3xl font-medium mt-60 mb-8">---SALE FEVER---</h4>
-                  <h3 class="w-[650px] text-[#111] text-5xl font-bold mb-20">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h3>
+                  <h4 class="text-[#111] text-2xl lg:text-3xl font-medium mt-6 mb-4 lg:mt-60 lg:mb-8">---SALE FEVER---</h4>
+                  <h3 class="lg:w-[650px] text-[#111] text-3xl lg:text-5xl font-bold mb-7 lg:mb-20">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h3>
                   <div class="flex flex-row justify-center items-center gap-4">
                     <h3 class="text-[#111] text-2xl font-medium">Use Promo Code</h3>
                     <button class="bg-[#E527B2] text-white px-6 py-4 rounded-lg">SELL200</button>
@@ -39,7 +39,7 @@
                 </div>
 
                 <div>
-                    <img class="mt-20 mb-20" src="./images/Summer 1.png" alt="">
+                    <img class="lg:mt-20 lg:mb-20 w-[450px] lg:w-[700px]" src="./images/Summer 1.png" alt="">
                 </div>
             </div>
             </header>
