assignment fully completed

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 </button>
                 <dialog
                   id="my_modal_3"
-                  class="modal modal-bottom mx-8 w-[90%] px-10 sm:modal-middle pb-24"
+                  class="modal modal-bottom p-4 mx-8 w-[90%] sm:modal-middle pb-24"
                 >
                   <form method="dialog" class="modal-box">
                     <figure class="flex justify-center pt-20">
